using System;

namespace Zombie3D
{
	public class EnemyAnimatorParameter
	{
		public const string StartAniID = "StartAniID";

		public const string HurtID = "HurtID";

		public const string DieID = "DieID";

		public const string AttackID = "AttackID";

		public const string WalkID = "WalkID";

		public const string ActionID = "ActionID";

		public const string Angery = "Angery";

		public const string MiddleSpineRight = "MiddleSpineRight";

		public const string IsElite = "isElite";

		public const string IsWeaponed = "IsWeaponed";

		public const string DoJumpOffset = "DoJumpOffset";

		public const string hp = "hp";

		public const string PatrolSpeed = "PatrolSpeed";

		public const string OnWakeUp = "OnWakeup";

		public const string OnHurt = "OnHurt";

		public const string OnAngery = "OnAngery";

		public const string OnAttack = "OnAttack";

		public const string OnDie = "OnDie";

		public const string OnClimb = "OnClimb";

		public const string OnStepOut = "OnStepOut";

		public const string OnRush = "OnRush";

		public const string OnRushEnd = "OnRushEnd";

		public const string OnExplod = "OnExplod";

		public const string OnSkill = "OnSkill";

		public const string OnDizziness = "OnDizziness";

		public const string ForceIdle = "ForceIdle";

		public const string Throw = "Throw";

		public const string Shout = "Shout";

		public const string OnHoldOver = "OnHoldOver";

		public const string OnGround = "OnGround";

		public const string HurtBone = "HurtBone";
	}
}
